# wordcustomizer

./: CMakeLists.txt  README.md
src/: main.cpp
src/engine/: CMakeLists.txt  DocxEngine.cpp  DocxEngine.h
src/macros/: CMakeLists.txt
src/styles/: CMakeLists.txt
src/templates/: CMakeLists.txt
src/ui/: CMakeLists.txt
